--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "path": "^0.12.7",
     "split": "^1.0.1",
     "superagent": "^3.8.2",
+    "swagger-ui-express": "^4.0.1",
     "token-extractor": "^0.1.6",
     "ts-node": "^7.0.0",
     "typeorm": "^0.2.7",
@@ -57,6 +58,7 @@
     "@types/rimraf": "2.0.2",
     "@types/superagent": "^3.5.7",
     "@types/supertest": "^2.0.4",
+    "@types/swagger-ui-express": "^3.0.0",
     "chai": "^4.1.2",
     "cross-env": "^5.1.4",
     "mocha": "^5.0.4",
